Adiciona spa-navigation.js em todas as páginas para navegação SPA sem piscar
- Adiciona spa-navigation.js e app-state.js em todas as páginas que ainda não tinham
- Mantém background e navbar fixos durante navegação
- Elimina o 'piscar' entre páginas usando double buffering
- Não invasivo - apenas adiciona scripts, não mexe na estrutura existente

--- a/www/dashboard.html
+++ b/www/dashboard.html
@@ -28,6 +28,10 @@
         console.log('[dashboard] BASE_APP_URL:', window.BASE_APP_URL);
     </script>
     <script src="./assets/js/auth.js"></script>
+    <!-- SPA Navigation - Mantém background e navbar fixos -->
+    <script src="./assets/js/spa-navigation.js"></script>
+    <!-- App State - Gerencia estado para evitar recarregamentos -->
+    <script src="./assets/js/app-state.js"></script>
     <script src="./assets/js/page-transitions.js"></script>
     
     <style>
