--- a/www/ranking.html
+++ b/www/ranking.html
@@ -549,6 +549,10 @@ body {
         }
     </script>
     <script src="./assets/js/auth.js"></script>
+    <!-- SPA Navigation - Mantém background e navbar fixos -->
+    <script src="./assets/js/spa-navigation.js"></script>
+    <!-- App State - Gerencia estado para evitar recarregamentos -->
+    <script src="./assets/js/app-state.js"></script>
     <script src="./assets/js/common.js"></script>
     
     <!-- Ícones -->
