--- a/www/scan_barcode.html
+++ b/www/scan_barcode.html
@@ -17,6 +17,10 @@
         }
     </script>
     <script src="./assets/js/auth.js"></script>
+    <!-- SPA Navigation - Mantém background e navbar fixos -->
+    <script src="./assets/js/spa-navigation.js"></script>
+    <!-- App State - Gerencia estado para evitar recarregamentos -->
+    <script src="./assets/js/app-state.js"></script>
 
     <style>
         /* === ESTILO PARA SCANNER NATIVO === */
