--- a/www/view_recipe.html
+++ b/www/view_recipe.html
@@ -63,6 +63,10 @@
     <!-- Helpers e Auth -->
     <script src="./assets/js/common.js"></script>
     <script src="./assets/js/auth.js"></script>
+    <!-- SPA Navigation - Mantém background e navbar fixos -->
+    <script src="./assets/js/spa-navigation.js"></script>
+    <!-- App State - Gerencia estado para evitar recarregamentos -->
+    <script src="./assets/js/app-state.js"></script>
     <script>
         if (typeof getLocalDateString !== 'function') {
             window.getLocalDateString = function(date = null) {
