--- a/www/edit_profile.html
+++ b/www/edit_profile.html
@@ -28,6 +28,10 @@
         }
     </script>
     <script src="./assets/js/auth.js"></script>
+    <!-- SPA Navigation - Mantém background e navbar fixos -->
+    <script src="./assets/js/spa-navigation.js"></script>
+    <!-- App State - Gerencia estado para evitar recarregamentos -->
+    <script src="./assets/js/app-state.js"></script>
     
     <style>
 /* CSS do layout nativo para mobile - Edit Profile */
