--- a/www/favorite_recipes.html
+++ b/www/favorite_recipes.html
@@ -59,6 +59,10 @@
     
     <!-- Auth Script -->
     <script src="./assets/js/auth.js"></script>
+    <!-- SPA Navigation - Mantém background e navbar fixos -->
+    <script src="./assets/js/spa-navigation.js"></script>
+    <!-- App State - Gerencia estado para evitar recarregamentos -->
+    <script src="./assets/js/app-state.js"></script>
     
     <style>
         body {
