Fix: adicionar scripts corretos ao main_app.html e ajustar script.js para SPA

--- a/www/main_app.html
+++ b/www/main_app.html
@@ -2207,7 +2207,9 @@ body.checkin-modal-open .checkin-input-container {
 
 
 
-<!-- Scripts do carrossel de banners -->
-
-<script src="./assets/js/pages/main_app.js"></script>
+<!-- Scripts necessários para main_app -->
+<script src="./assets/js/pages/main_app_core.js"></script>
+<script src="./assets/js/pages/main_app_checkin.js"></script>
+<script src="./assets/js/script.js"></script>
+<script src="./assets/js/banner-carousel.js"></script>
 </div>
