Fix: melhorar aguardo do Lottie.js no banner-carousel

--- a/www/index.html
+++ b/www/index.html
@@ -78,7 +78,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     
     <!-- Lottie.js para animações dos banners -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/lottie-web/5.12.2/lottie.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lottie-web/5.12.2/lottie.min.js" onload="console.log('[Index] Lottie.js carregado')" onerror="console.error('[Index] Erro ao carregar Lottie.js')"></script>
     
     <!-- CSS Principal Global -->
     <link rel="stylesheet" href="./assets/css/style.css">
